Update ReadMe and normalize test plan.